--- a/src/Makefile.win
+++ b/src/Makefile.win
@@ -12,10 +12,6 @@
 #   MINGW=yes will use the mingw compiler
 #
 
-# Executable name and default target
-EXE = angband.exe
-all: ../$(EXE)
-
 ifneq (,$(findstring \system32,$(PATH)))
   CP = copy
   RM = del
@@ -34,6 +30,10 @@ endif
 # Include list of object files and add system-specific ones
 include Makefile.inc
 MAINFILES="$(WINMAINFILES)"
+
+# Executable name and default target
+EXE = $(PROGNAME).exe
+all: ../$(EXE)
 
 ifdef CONSOLE
   CFLAGS = -DUSE_GCU -DWIN32_CONSOLE_MODE -I$(PDCURSES_INC)
