Move game-cmd to cmd-core

--- a/src/Makefile.src
+++ b/src/Makefile.src
@@ -14,9 +14,9 @@ HEADERS = \
 	angband.h \
 	birth.h \
 	cmds.h \
+	cmd-core.h \
 	config.h \
 	effects.h \
-	game-cmd.h \
 	game-event.h \
 	guid.h \
 	h-basic.h \
@@ -90,6 +90,7 @@ ANGFILES = \
 	birth.o \
 	cave.o \
 	cmd-cave.o \
+	cmd-core.o \
 	cmd-context.o \
 	cmd-know.o \
 	cmd-misc.o \
@@ -101,7 +102,6 @@ ANGFILES = \
 	dungeon.o \
 	effects.o \
 	files.o \
-	game-cmd.o \
 	game-event.o \
 	generate.o \
 	gen-cave.o \
