--- a/lib/edit/Makefile
+++ b/lib/edit/Makefile
@@ -1,7 +1,7 @@
 MKPATH=../../mk/
 include $(MKPATH)buildsys.mk
 
-CONFIG = artifact.txt ego_item.txt flavor.txt limits.txt monster.txt \
+CONFIG = artifact.txt body.txt ego_item.txt flavor.txt limits.txt monster.txt \
  monster_base.txt names.txt object.txt object_base.txt p_class.txt p_hist.txt \
  p_race.txt spell.txt store.txt terrain.txt vault.txt hints.txt \
  pain.txt pit.txt room_template.txt trap.txt
